--- a/templates/register.html
+++ b/templates/register.html
@@ -98,7 +98,7 @@
                     {% endif %}
                 </div>
                 
-                {{ form.submit(class="btn btn-primary") }}
+                {{ form.submit(class="btn btn-primary", onclick="console.log('Register button clicked!')") }}
             </form>
             
             <div class="auth-links">
